Fix post list text overflow bug

--- a/css/style.scss
+++ b/css/style.scss
@@ -1084,7 +1084,7 @@ input, textarea, button {
 					margin: 0 0 0.06rem;
 					font-size: 0.18rem;
 					text-overflow: ellipsis;
-					white-space: nowrap;
+					//white-space: nowrap;
 					a { font-weight: bold;}
 				}
 				.post_body {
